force-app/main/default/objects/IME_SC_Case_View_Info__c/IME_SC_Case_View_Info__c.object-meta.xml
<CustomObject>
    <description>The object will be used for black mark report, to manage the number of views for any case records.</description>
    <label>Case View Info</label>
    <nameField>
        <label>Case View Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case View Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>