force-app/main/default/objects/IME_SC_Case_View_Info__c/fields/IME_SC_Case__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case View Info</relationshipLabel>
    <relationshipName>Case_View_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>