force-app/main/default/objects/IME_SC_Case_View_Info__c/fields/IME_SC_Counter__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_Counter__c</fullName>
    <label>Number of View</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>