force-app/main/default/objects/IME_SC_Case_View_Info__c/fields/IME_SC_User__c.field-meta.xml
<CustomField>
    <fullName>IME_SC_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up user.</description>
    <label>View By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_View_Info</relationshipName>
    <type>Lookup</type>
</CustomField>